testsuite/tests/parser/should_fail/cmdFail002.stderr

cmdFail002.hs:4:15: error: [GHC-03790]
    Parse error in command: (_ -< _) :: _
